--- a/lang/zh_CN.lang
+++ b/lang/zh_CN.lang
@@ -1,23 +1,23 @@
-myst.profiling.running=Expect Lag (Profiling)
-myst.profiling.running.message=Mystcraft is baking a cake.
-myst.profiling.complete=Ding!
-myst.profiling.complete.message=Mystcraft Profiling Complete
+myst.profiling.running=预期有卡顿（性能分析进行中）
+myst.profiling.running.message=Mystcraft 正在烤蛋糕。
+myst.profiling.complete=叮！
+myst.profiling.complete.message=Mystcraft 已完成性能分析
 
 commands.myst.generic.player.notfound=不能获取此名称的玩家: %s
 
 commands.myst.tpx.usage=/tpx [subject:player] <targer:player | target:dim [x y z]>
 commands.myst.tpx.fail.nosubject=被传送对象无效，传送失败。
-commands.myst.tpx.fail.noworld=无法找到编号为%d的位面，传送失败。
+commands.myst.tpx.fail.noworld=无法找到编号为 %d 的维度，传送失败。
 
 commands.myst.time.usage=/time <set|add> <value> [dim]
-commands.myst.time.fail.noworld=目标位面未被加载。
-commands.myst.time.set=设置时间为%d(在编号为%d的位面中)
-commands.myst.time.set.all=设置所有位面的时间为%d
-commands.myst.time.added=将时间增加%d(在编号为%d的位面中)
-commands.myst.time.added.all=将所有位面的时间增加%d
+commands.myst.time.fail.noworld=目标维度未被加载。
+commands.myst.time.set=维度 %2$d 的时间已设为 %1$d
+commands.myst.time.set.all=所有维度的时间已设为 %d
+commands.myst.time.added=将维度 $2%d 的时间增加 %1$d
+commands.myst.time.added.all=将所有维度的时间增加 %d
 
 commands.myst.toggledownfall.usage=/toggledownfall [dim]
-commands.myst.downfall.success=删除编号为%d的位面
+commands.myst.downfall.success=删除编号为 %d 的位面
 commands.myst.downfall.fail.nodim=没有设置位面
 
 commands.myst.agebook.usage=/myst-agebook [dim]
@@ -59,21 +59,21 @@ item.myst.unlinkedbook.name=未链接的书
 item.myst.writingdesk.name=书写台
 item.myst.writingdesk.top.name=书写台底板
 item.myst.vial.name=墨瓶
-item.myst.glasses.name=XComp的护目镜
+item.myst.glasses.name=XComp 的护目镜
 
 itemGroup.mystcraft.common=神秘岛
 itemGroup.mystcraft.pages=神秘岛书页
 
-myst.creative.notebook.wrapper=生成(%s)
+myst.creative.notebook.wrapper=生成 %s
 myst.creative.notebook.all=所有符号
 myst.creative.notebook.biomedist=生态群系分布
 myst.creative.notebook.celestials=天空
-myst.creative.notebook.effects=buff效果
+myst.creative.notebook.effects=状态效果
 myst.creative.notebook.lighting=光照
-myst.creative.notebook.modbasic=修饰, 基础
-myst.creative.notebook.modbiome=修饰, 生态群系
-myst.creative.notebook.modblock=修饰, 方块
-myst.creative.notebook.modcolor=修饰, 颜色
+myst.creative.notebook.modbasic=基础修饰符
+myst.creative.notebook.modbiome=生态群系修饰符
+myst.creative.notebook.modblock=方块修饰符
+myst.creative.notebook.modcolor=颜色修饰符
 myst.creative.notebook.features=世界特征
 myst.creative.notebook.terrain=世界景观
 myst.creative.notebook.visuals=视觉效果
@@ -82,20 +82,24 @@ myst.creative.notebook.weather=天气
 fluid.myst.ink.black=墨水
 tile.myst.fluid.myst.ink.black.name=墨水
 
+advancements.myst.root.title=Mystcraft
+advancements.myst.root.description=
+
 achievement.myst.symbol=千里之旅始于跬步
 achievement.myst.symbol.desc=寻找到徽记
-achievement.myst.write=艺术:入门卷
+achievement.myst.write=艺术：入门卷
 achievement.myst.write.desc=拷贝一张徽记
 achievement.myst.agebook=异界单程票
 achievement.myst.agebook.desc=合成一本时代书用以穿越，别忘了这种穿越只是单向的!
 achievement.myst.linkbook=阿里阿德涅的线团
 achievement.myst.linkbook.desc=合成一本链接书，现在你可以回到定义链接的地方了!
-achievement.myst.quinn=我的名字叫Quinn
+achievement.myst.quinn=我的名字叫 Quinn
 achievement.myst.quinn.desc=不携带链接之书穿越到其他位面，希望还能找到归途!
 
 linkeffect.disarm.name=缴械
 linkeffect.generateplatform.name=生成平台
 linkeffect.intralinking.name=时代内链接
+linkeffect.intralinkingonly.name=仅时代内链接
 linkeffect.maintainmomentum.name=保持动力
 linkeffect.relative.name=相关链接
 
@@ -107,8 +111,8 @@ instability.bonus.troll.death=%s已经被杀死,正在重置不稳定惩罚!
 instability.bonus.troll.alert=%s进入到这个世界.这个世界会慢慢变得更加不稳定.杀死他们可以重置不稳定惩罚!
 instability.bonus.troll.left=%s已经离开这个世界.不稳定惩罚会逐渐失效.
 
-myst.symbol.biome.wrapper=%s生态群系
-myst.symbol.block.wrapper=%s方块
+myst.symbol.biome.wrapper=生态群系：%s
+myst.symbol.block.wrapper=方块：%s
 
 myst.symbol.biocongrid.name=格型生物群系
 myst.symbol.bioconhuge.name=巨型生物群系
@@ -156,22 +160,22 @@ myst.symbol.lightingdark.name=暗淡光照
 myst.symbol.lightingnormal.name=正常光照
 myst.symbol.mineshafts.name=矿井
 myst.symbol.modclear.name=清除修改
-myst.symbol.modcolormaroon=Kastanienbraune =栗色
-myst.symbol.modcolorred=Rote =红色
-myst.symbol.modcolorolive=Olivgrüne =橄榄色
-myst.symbol.modcoloryellow=Gelbe =黄色
-myst.symbol.modcolordarkgreen=Dunkelgrüne =暗绿色
-myst.symbol.modcolorgreen=Grüne =绿色
-myst.symbol.modcolorteal=Blaugrüne =深青色
-myst.symbol.modcolorcyan=Türkise =青色
-myst.symbol.modcolornavy=Marinblaue =藏青色
-myst.symbol.modcolorblue=Blaue =蓝色
-myst.symbol.modcolorpurple=Violette =紫色
-myst.symbol.modcolormagenta=Magenta =品红色
-myst.symbol.modcolorblack=Schwarze =黑色
-myst.symbol.modcolorgrey=Graue =灰色
-myst.symbol.modcolorsilver=Silberne =银色
-myst.symbol.modcolorwhite=Weiße =白色
+myst.symbol.modcolormaroon=栗色
+myst.symbol.modcolorred=红色
+myst.symbol.modcolorolive=橄榄色
+myst.symbol.modcoloryellow=黄色
+myst.symbol.modcolordarkgreen=暗绿色
+myst.symbol.modcolorgreen=绿色
+myst.symbol.modcolorteal=深青色
+myst.symbol.modcolorcyan=青色
+myst.symbol.modcolornavy=藏青色
+myst.symbol.modcolorblue=蓝色
+myst.symbol.modcolorpurple=紫色
+myst.symbol.modcolormagenta=品红色
+myst.symbol.modcolorblack=黑色
+myst.symbol.modcolorgrey=灰色
+myst.symbol.modcolorsilver=银色
+myst.symbol.modcolorwhite=白色
 myst.symbol.modgradient.name=渐变
 myst.symbol.moondark.name=深色月亮
 myst.symbol.moonnormal.name=正常月亮
@@ -179,7 +183,7 @@ myst.symbol.netherfort.name=下界要塞
 myst.symbol.nohorizon.name=无边天空
 myst.symbol.nosea.name=无海洋
 myst.symbol.obelisks.name=方尖碑
-myst.symbol.pvpoff.name=反PvP
+myst.symbol.pvpoff.name=反 PvP
 myst.symbol.rainbow.name=彩虹
 myst.symbol.ravines.name=峡谷
 myst.symbol.skylands.name=空岛
@@ -197,6 +201,8 @@ myst.symbol.terrainamplified.name=放大化正常世界
 myst.symbol.terrainend.name=岛屿世界
 myst.symbol.terrainnether.name=洞穴世界
 myst.symbol.terrainnormal.name=普通世界
+myst.symbol.terrainflat.name=平坦世界
+myst.symbol.terrainvoid.name=虚空世界
 myst.symbol.weathercloudy.name=阴天
 myst.symbol.weatherfast.name=快速变换天气
 myst.symbol.weathernorm.name=正常天气
