--- a/lang/zh_CN.lang
+++ b/lang/zh_CN.lang
@@ -1,4 +1,4 @@
-myst.profiling.running=预期有卡顿（性能分析进行中）
+myst.profiling.running=预计有卡顿（正在进行性能分析）
 myst.profiling.running.message=Mystcraft 正在烤蛋糕。
 myst.profiling.complete=叮！
 myst.profiling.complete.message=Mystcraft 已完成性能分析
@@ -27,7 +27,7 @@ commands.myst.permissions.usage=/myst-permissions <player> <restrict|permit> <en
 commands.myst.chunkregen.usage=/myst-regenchunk [range]
 
 entity.Mystcraft.myst.book.name=书
-entity.Mystcraft.myst.block.name=坠落方块
+entity.Mystcraft.myst.block.name=下落的方块
 entity.Mystcraft.myst.meteor.name=陨石
 
 tile.myst.receptacle.name=插槽
@@ -66,12 +66,12 @@ itemGroup.mystcraft.pages=神秘岛书页
 
 myst.creative.notebook.wrapper=生成 %s
 myst.creative.notebook.all=所有符号
-myst.creative.notebook.biomedist=生态群系分布
+myst.creative.notebook.biomedist=生物群系分布
 myst.creative.notebook.celestials=天空
 myst.creative.notebook.effects=状态效果
 myst.creative.notebook.lighting=光照
 myst.creative.notebook.modbasic=基础修饰符
-myst.creative.notebook.modbiome=生态群系修饰符
+myst.creative.notebook.modbiome=生物群系修饰符
 myst.creative.notebook.modblock=方块修饰符
 myst.creative.notebook.modcolor=颜色修饰符
 myst.creative.notebook.features=世界特征
@@ -93,7 +93,7 @@ achievement.myst.agebook=异界单程票
 achievement.myst.agebook.desc=合成一本时代书用以穿越，别忘了这种穿越只是单向的!
 achievement.myst.linkbook=阿里阿德涅的线团
 achievement.myst.linkbook.desc=合成一本链接书，现在你可以回到定义链接的地方了!
-achievement.myst.quinn=我的名字叫 Quinn
+achievement.myst.quinn=我叫 Quinn
 achievement.myst.quinn.desc=不携带链接之书穿越到其他位面，希望还能找到归途!
 
 linkeffect.disarm.name=缴械
@@ -107,14 +107,14 @@ instability.bonus.death=%s已经被%s杀死,正在激活稳定奖励!
 instability.bonus.death.partial=%s已经死亡.正在解锁部分稳定奖励.亲手杀死他们将解锁全部的稳定奖励!
 instability.bonus.death.alert=%s已经闯入这个世界.去杀了他们,为了获得当前世界临时的稳定奖励!
 
-instability.bonus.troll.death=%s已经被杀死,正在重置不稳定惩罚!
-instability.bonus.troll.alert=%s进入到这个世界.这个世界会慢慢变得更加不稳定.杀死他们可以重置不稳定惩罚!
-instability.bonus.troll.left=%s已经离开这个世界.不稳定惩罚会逐渐失效.
+instability.bonus.troll.death=%s已经被杀死，正在重置不稳定惩罚！
+instability.bonus.troll.alert=%s 进入到这个世界。这个世界会慢慢变得更加不稳定。杀死他们可以重置不稳定惩罚！
+instability.bonus.troll.left=%s 已经离开这个世界。不稳定惩罚会逐渐失效。
 
-myst.symbol.biome.wrapper=生态群系：%s
+myst.symbol.biome.wrapper=生物群系：%s
 myst.symbol.block.wrapper=方块：%s
 
-myst.symbol.biocongrid.name=格型生物群系
+myst.symbol.biocongrid.name=网格生物群系
 myst.symbol.bioconhuge.name=巨型生物群系
 myst.symbol.bioconlarge.name=大型生物群系
 myst.symbol.bioconmedium.name=中型生物群系
